<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="postsList" type="id"/>
</resources>