...
            android:layout_height="match_parent"
            tools:context=".PostFragment"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:background="@android:color/white">
        <ScrollView android:layout_width="match_parent"
                    android:id="@+id/content"
                    android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/picture"
...
